Prevent sidebar overflow breaking small screen layout on Poster 2016 page

--- a/css/custom/poster2016.less
+++ b/css/custom/poster2016.less
@@ -5,6 +5,11 @@ body {
 	position: relative;
 }
 
+.sidebar {
+	@media (max-width: @screen-sm) {
+		overflow: hidden;
+}
+
 #poster-container {
 	@media (max-width: @screen-md) {
 		width: 110%;
